--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -11,11 +11,14 @@ server {
     root /usr/src/app/web;
 
 # SSL
+    ssl on;
     ssl_certificate /etc/ssl/private/certificate.crt;
     ssl_certificate_key /etc/ssl/private/certificate.key;
+    ssl_dhparam /etc/ssl/private/dh.pem;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # disable poodle
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
 
-# Handle SSL
-    ssl on;
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
