--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -22,6 +22,11 @@ server {
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
+# Gzip
+    gzip on;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
+
     location ~* \.(svg|svgz|eot|otf|woff|ttf|css|jpg|jpeg|gif|png|ico)$ {
         expires @24h;
     }
