Removed default Nginx server. Added comments where needed

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -10,6 +10,9 @@ server {
     server_name _;
     root /usr/src/app/web;
 
+    error_log /dev/stderr info;
+    access_log /dev/stdout;
+
 # SSL
     ssl on;
     ssl_certificate /etc/ssl/private/certificate.crt;
