--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,50 +1,70 @@
-server {
-    listen [::]:80 default_server;
-    listen 80 default_server;
-    server_name _;
-    return 301 https://clipboard.ninja$request_uri;
+worker_processes 1;
+pid /run/nginx.pid;
+
+events {
+    worker_connections 1024;
 }
-server {
-    listen [::]:443 ssl http2 default_server;
-    listen 443 http2 default_server;
-    server_name _;
-    root /usr/src/app/web;
 
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main_timed  '$remote_addr - $remote_user [$time_local] "$request" '
+                            '$status $body_bytes_sent "$http_referer" '
+                            '"$http_user_agent" "$http_x_forwarded_for" '
+                            '$request_time $upstream_response_time $pipe $upstream_cache_status';
+
+    access_log /dev/stdout main_timed;
     error_log /dev/stderr info;
-    access_log /dev/stdout;
 
-# SSL
-    ssl on;
-    ssl_certificate /etc/ssl/private/certificate.crt;
-    ssl_certificate_key /etc/ssl/private/certificate.key;
-    ssl_dhparam /etc/ssl/private/dh.pem;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # disable poodle
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
+    keepalive_timeout  65;
+    server_tokens off;
 
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-
-# Gzip
+    # Gzip
     gzip on;
     gzip_http_version 1.1;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
 
-    location ~* \.(svg|svgz|eot|otf|woff|ttf|css|jpg|jpeg|gif|png|ico)$ {
-        expires @24h;
+    server {
+        listen [::]:80 default_server;
+        listen 80 default_server;
+        server_name _;
+        return 301 https://clipboard.ninja$request_uri;
     }
-    location = /robots.txt {
-        log_not_found off;
-        access_log off;
-        return 404;
-    }
+    server {
+        listen [::]:443 ssl http2 default_server;
+        listen 443 http2 default_server;
+        server_name _;
+        root /usr/src/app/web;
 
-    location / {
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_http_version 1.1;
-        proxy_pass http://127.0.0.1:3000;
+        # SSL
+        ssl on;
+        ssl_certificate /etc/ssl/private/certificate.crt;
+        ssl_certificate_key /etc/ssl/private/certificate.key;
+        ssl_dhparam /etc/ssl/private/dh.pem;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # disable poodle
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
+
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+
+        location ~* \.(svg|svgz|eot|otf|woff|ttf|css|jpg|jpeg|gif|png|ico)$ {
+            expires @24h;
+        }
+        location = /robots.txt {
+            log_not_found off;
+            access_log off;
+            return 404;
+        }
+
+        location / {
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_http_version 1.1;
+            proxy_pass http://127.0.0.1:3000;
+        }
     }
 }
